# puzzles-ts

./: .gitignore  AGENTS.md  Brewfile  CLAUDE.md  CREDITS.md  LICENSE.md  PLAN.md  README.md  biome.json  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.antigravitycli/: ea78fe17-35ec-4f32-b7a3-cb30060e338a.json
.claude/commands/: familiarize.md
.github/workflows/: build-deploy.yml  ci.yml
.husky/: pre-commit
.letta/: .lettaignore  settings.local.json
Docker/: build-emcc.sh
docs/porting/: game-port-playbook.md  hint-authoring.md
help/: differences.md
openspec/: project.md
openspec/archive/add-pegs-ts-port/: design.md  tasks.md
openspec/archive/add-sixteen-ts-port/: design.md
openspec/changes/add-benchmark-soak/: design.md  proposal.md  tasks.md
openspec/changes/add-blackbox-ts-port/: design.md  tasks.md
openspec/changes/add-bridges-ts-port/: tasks.md
openspec/changes/add-cube-ts-port/: tasks.md
openspec/changes/add-desc-supersede-hook/: design.md  proposal.md  tasks.md
openspec/changes/add-dominosa-ts-port/: design.md  proposal.md  tasks.md
openspec/changes/add-fifteen-ts-port/: design.md  proposal.md  tasks.md
openspec/changes/add-filling-ts-port/: design.md  tasks.md
openspec/changes/add-findmistakes-galaxies/: design.md
openspec/changes/add-flood-ts-port/: design.md  proposal.md  tasks.md
openspec/changes/add-galaxies-ts-port/: design.md  proposal.md  tasks.md
openspec/changes/add-game-dev-guides/: design.md  proposal.md  tasks.md
openspec/changes/add-group-hint/: design.md  proposal.md  tasks.md
openspec/changes/add-group-ts-port/: design.md  proposal.md  tasks.md
openspec/changes/add-guess-ts-port/: proposal.md  tasks.md
openspec/changes/add-hint-plans/: proposal.md  tasks.md
openspec/changes/add-hint-system/: proposal.md  tasks.md
openspec/changes/add-hint-type-colour-legend/: design.md  proposal.md  tasks.md
openspec/changes/add-in-process-ui-test-harness/: design.md  tasks.md
openspec/changes/add-inertia-hint/: design.md  proposal.md  tasks.md
openspec/changes/add-inertia-ts-port/: design.md  tasks.md
openspec/changes/add-layered-license-and-credits/: tasks.md
openspec/changes/add-lightup-hint/: tasks.md
openspec/changes/add-lightup-ts-port/: design.md  tasks.md
openspec/changes/add-loopy-ts-port/: design.md  proposal.md  tasks.md
openspec/changes/add-mines-ts-port/: design.md  tasks.md
openspec/changes/add-mosaic-ts-port/: tasks.md
openspec/changes/add-net-ts-port/: proposal.md  tasks.md
openspec/changes/add-netslide-hint/: design.md  proposal.md  tasks.md
openspec/changes/add-netslide-ts-port/: tasks.md
openspec/changes/add-numgame-ts-port/: design.md  proposal.md  tasks.md
openspec/changes/add-palisade-ts-port/: tasks.md
openspec/changes/add-path-ts-port/: design.md  proposal.md  tasks.md
openspec/changes/add-pattern-hint/: tasks.md
openspec/changes/add-pegs-ts-port/: proposal.md
openspec/changes/add-pencil-cleanup-on-markall/: design.md  tasks.md
openspec/changes/add-range-hint/: proposal.md  tasks.md
openspec/changes/add-range-ts-port/: tasks.md
openspec/changes/add-render-snapshot-harness/: design.md  proposal.md  tasks.md
openspec/changes/add-samegame-ts-port/: tasks.md
openspec/changes/add-save-confirmation-toast/: proposal.md
openspec/changes/add-scene-graph-reconciler/: design.md  proposal.md  tasks.md
openspec/changes/add-screenshot-icon-capture/: design.md
openspec/changes/add-singles-hint/: tasks.md
openspec/changes/add-sixteen-drag-to-slide/: tasks.md
openspec/changes/add-sixteen-ts-port/: proposal.md
openspec/changes/add-slant-ts-port/: design.md  proposal.md  tasks.md
openspec/changes/add-slide-ts-port/: design.md  proposal.md  tasks.md
openspec/changes/add-sokoban-ts-port/: design.md  proposal.md  tasks.md
openspec/changes/add-solo-hint/: design.md  proposal.md  tasks.md
openspec/changes/add-solo-ts-port/: design.md  tasks.md
openspec/postmortems/: 2026-05-21-scene-graph-withdrawal.md
puzzles/: CMakeLists.txt  devel.but  emcc-dependency-info.py  puzzles.h  random_bridge.js  sha.c  webapp.cpp
puzzles/auxiliary/: CMakeLists.txt  bridges-trace.c  combi-trace.c  dominosa-trace.c  filling-trace.c  galaxies-trace.c  grid-trace.c  guess-trace.c  inertia-trace.c  lightup-trace.c  netslide-trace.c  random-trace.c  samegame-trace.c  slant-trace.c  solo-trace.c  spectre-tables-dump.c  unequal-trace.c  unruly-trace.c
puzzles/cmake/: setup.cmake
puzzles/html/: netslide.html
puzzles/unfinished/: CMakeLists.txt
scripts/: build-emcc.sh  build-icons.sh  build-native.sh  diff-flip.test.ts  diff-flip.vitest.config.mts  diff-galaxies.test.ts  diff-galaxies.vitest.config.mts  diff-unruly.test.ts  diff-unruly.vitest.config.mts  diff.vitest.config.mts  gate.sh  gen-hat-tables.mjs  gen-spectre-tables.mjs  new-game-port.sh  reap-orphaned-workers.sh
src/: asset-integrity.test.ts  crash-dialog.ts  home-page.ts  icons.ts  puzzle-page.ts  routing.ts  vite-env.d.ts
src/components/: catalog-card.ts  command-link.ts  dynamic-content.ts  head-matter.ts  help-viewer.ts  reference-panel.ts  saved-game-list.ts
src/css/: home-screen.css  wa-tweaks.css
src/dialogs/: about-dialog.ts  alert-dialog.ts  crash-dialog.ts  enter-gameid-dialog.ts  saved-game-dialogs.ts  settings-dialog.ts  share-dialog.ts  toast.test.ts  toast.ts
src/native/: random-bridge.ts  random.ts  sha1.ts
src/puzzle/: augmentation.test.ts  augmentation.ts  canvas-sizing.test.ts  canvas-sizing.ts  drawing.ts  engine-surface.ts  icon-capture.ts  other-puzzles-menu.ts  puzzle-hint-stepper.test.ts  puzzle-history.ts  puzzle-view-interactive.test.ts  puzzle-view-interactive.ts  puzzle-view.ts  puzzle.ts  quick-save-actions.ts  types.ts  worker.ts
src/screens/: home-screen.ts  puzzle-screen.test.ts  puzzle-screen.ts  screen.ts
src/store/: db.ts  saved-games.test.ts  saved-games.ts
src/test-setup/: icons.ts  indexeddb.ts
src/utils/: errors.ts  sentry.ts
templates/: _headers.txt.hbs  index.html.hbs  puzzle.html.hbs
vite-plugins/: extra-pages.ts  wasm-sourcemaps.ts
(+1192 files in other folders)
